--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "start": "es-dev-server --app-index index.html --node-resolve --open --watch"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "@open-wc/building-rollup": "^1.0.0",
+    "@open-wc/demoing-storybook": "^2.0.0",
     "@open-wc/eslint-config": "^2.0.0",
-    "prettier": "^2.0.4",
+    "@open-wc/testing": "^2.0.0",
+    "@open-wc/testing-karma": "^3.0.0",
+    "deepmerge": "^3.2.0",
+    "es-dev-server": "^1.5.0",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
-    "@open-wc/testing-karma": "^3.0.0",
-    "deepmerge": "^3.2.0",
-    "@open-wc/testing": "^2.0.0",
-    "@open-wc/demoing-storybook": "^2.0.0",
-    "@open-wc/building-rollup": "^1.0.0",
+    "prettier": "^2.0.4",
     "rimraf": "^2.6.3",
     "rollup": "^2.3.4",
-    "es-dev-server": "^1.5.0"
+    "rollup-plugin-copy": "^3.3.0"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +60,7 @@
   "license": "MIT",
   "dependencies": {
     "@lion/localize": "^0.13.1",
-    "fa-icons": "^0.2.0",
+    "fa-icons": "0.2.0",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   }
