--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
   "license": "MIT",
   "dependencies": {
     "@lion/localize": "^0.13.1",
-    "fa-icons": "0.2.0",
     "lit-element": "^2.0.1",
+    "lit-fontawesome": "^0.1.3",
     "lit-html": "^1.0.0"
   }
 }
