--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
   "author": "colurful-changes-lit",
   "license": "MIT",
   "dependencies": {
+    "@dotlottie/player-component": "^0.1.2",
     "@lion/localize": "^0.13.1",
+    "@lottiefiles/lottie-player": "^0.5.1",
     "lit-element": "^2.0.1",
     "lit-fontawesome": "^0.1.3",
     "lit-html": "^1.0.0"
